--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -2397,6 +2397,15 @@ constraints, resource sharing.},
 	year = 2010
 }
 
+@unpublished{Soulat12,
+	author = {Romain Soulat},
+	title = {Scheduling with {IMITATOR}: Some Case Studies},
+  	institution =	{Laboratoire Sp{\'e}cification et V{\'e}rification, ENS Cachan, France},
+	month = March,
+	year = 2012
+}
+
+
 
 @mastersthesis{soulat10b,
 	author =    {Soulat, Romain},
